@@ -1,10 +1,11 @@
+# Maintainer: Ong Yong Xin <ongyongxin2020+github AT gmail DOT com>
 # Maintainer: Xuanrui Qi <me@xuanruiqi.com>
 # Contributor: Rayfalling <Rayfalling@outlook.com>
 # Contributor: facekapow, rayfalling, Ducksoft
 _pkgname=genie
 pkgname=${_pkgname}-systemd
 pkgver=1.45
-pkgrel=1
+pkgrel=2
 pkgdesc="A quick way into a systemd \"bottle\" for WSL"
 arch=('x86_64')
 url="https://github.com/arkane-systems/genie"
@@ -12,9 +13,13 @@ license=('Unlicense')
 depends=('daemonize' 'dotnet-runtime>=5.0' 'dotnet-host>=5.0')
 makedepends=('dotnet-sdk>=5.0')
 source=(${_pkgname}-${pkgver}.tar.gz::https://github.com/arkane-systems/${_pkgname}/archive/refs/tags/v${pkgver}.tar.gz)
-sha256sums=('cf49e01a5c25d3902c5b70ac754eadb90d854bd664d46d694dcb6560b488379f')
+sha256sums=('SKIP')
 backup=('etc/genie.ini')
 options=(!strip)
+
+pkgver() {
+  git describe --long --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g;s/^v//g'
+}
 
 build() {
   cd "$srcdir/$_pkgname-$pkgver"
